# real-LiHua.github.io

./: .gitignore  .gitmodules  .oxlintrc.json  AGENTS.md  Cargo.toml  README.md  TODO.md  astro.config.mjs  astro.config.ts  avante.md  eslint.config.js  lychee.toml  message-filters.txt  oxfmt.config.ts  package-lock.json  package.json  pagefind.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  stylelint.config.js  tsconfig.json  tsconfig.tsbuildinfo  worker-configuration.d.ts  wrangler.jsonc
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml
.husky/: pre-commit  pre-commit.ts
.mcphub/: servers.json
public/: robots.txt
scripts/: post-edit.sh
src/: content.config.ts  env.d.ts  middleware.ts
src/components/: CodeCopy.astro  Copyright.astro  Footer.astro  Header.astro  IPFS.astro  Navigation.astro
src/integrations/: build-hooks.ts  mermaid-compile-time.ts  satteri-config.ts  xhtml-output.ts
src/layouts/: BaseLayout.astro  BlogPostLayout.astro  MarkdownPostLayout.astro
src/pages/: 404.astro  about.astro  blog.astro  drafts.astro  index.astro  meow.ts  robots.txt.ts  rss.xml.ts  telegram.astro
src/plugins/: mdast-toc.ts
src/post-edit/: main.rs
src/posts/: 1.md  2.mdx  2025-09-21-wo-de-wen-zhang-mu-lu.md  2026-02-23-ce-shi-wen-zhang.md  2026-02-23-zhe-shi-yi-pian-cao-gao.md  2026-03-19-1.md  2026-03-19-2.md  2026-03-19-3.md  2026-03-19-4.md  2026-03-19-5.md  2026-03-19-ce-shi.md  2026-03-19-test.md  draft-test.md  first-post.mdx  test.md
src/scripts/: code-copy.ts  footer-email.ts  gravatar-fallback.ts  toc.ts  (+5 more)
(+62 files in other folders)
